# glial-neural-networks

./: .gitignore  README.md  pyproject.toml
.kiro/steering/: experiment-summaries.md  experiment-timestamps.md
critical-reviews/: critical-review-03-accepted.md  critical-review-03.md
glia-neural-network-research/: 00-overview.md  01-biological-foundations.md  02-astrocyte-modulation.md  03-microglia-pruning.md  04-oligodendrocyte-timing.md  05-glia-intercommunication.md  06-interface-mechanisms.md  07-architectural-proposals.md  08-emergent-behaviors.md  09-existing-research.md  10-open-questions.md  11-spatial-geometries.md  12-modular-brain-structures.md
research/: 00-research-plan-overview.md  00a-computational-model-requirements.md  01-spatial-embedding.md  01b-theoretical-analysis.md  02-modulation-field.md  03-astrocyte-domains.md  04-turing-stability.md  05-microglia-agents.md  06-error-chemotaxis.md  07-volume-transmission.md  08-multi-timescale.md  09-continual-learning.md  10-full-ecosystem.md  11-scaling-and-cost.md  12-local-learning-rules.md  13-astrocyte-as-third-factor.md  14-volume-broadcast-teaching.md  15-heterosynaptic-plasticity.md  16-comparative-benefit.md  17-temporal-simulation-engine.md  18-myelination-delay-coupling.md  19-in-transit-signal-glia-interaction.md  20-full-spatial-temporal-simulation.md  future-experiment-ideas.md
steps/01-spatial-embedding/: README.md
steps/01-spatial-embedding-v2/: README.md  run_v2.py
steps/01b-theoretical-analysis/: README.md  run_01b.py
steps/12-local-learning-rules/: README.md
(+211 files in other folders)
