[project]
name = "glia-networks"
version = "0.1.0"
description = "Glia-augmented neural network research: spatial embedding experiments"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "hypothesis>=6.98.0",
    "hypothesis[numpy]",
]

[tool.pytest.ini_options]
testpaths = ["steps/01-spatial-embedding/code/tests", "steps/12-local-learning-rules/code/tests", "steps/13-astrocyte-gating/code/tests"]
pythonpath = ["steps/01-spatial-embedding", "steps/12-local-learning-rules"]
markers = [
    "property: marks tests as property-based tests (deselect with '-m \"not property\"')",
]

[tool.setuptools.packages.find]
where = ["steps/01-spatial-embedding"]
include = ["code*"]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"
